<!--
  ~ Copyright (c) 2022 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ This project and source code may use libraries or frameworks that are
  ~ released under various Open-Source licenses. Use of those libraries and
  ~ frameworks are governed by their own individual licenses.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory app:title="@string/display_header">

    <SwitchPreferenceCompat
      app:key="dark_mode"
      app:title="@string/preference_dark_mode_title"
      app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
      app:defaultValue="false"
      app:key="auto_advance"
      app:title="@string/preference_auto_advance_title" />

    <ListPreference
      android:defaultValue="15"
      android:entries="@array/time_options"
      android:entryValues="@array/time_options"
      android:key="time_length"
      android:title="@string/preference_seconds_title" />

  </PreferenceCategory>

  <PreferenceCategory app:title="@string/help_header">

    <CheckBoxPreference
      android:summary="@string/preference_onboarding_description"
      android:title="@string/preference_onboarding_title"
      app:defaultValue="true"
      app:key="onboarding" />

    <PreferenceScreen android:title="@string/preference_book_forum_title">
      <intent
        android:action="android.intent.action.VIEW"
        android:data="https://forums.raywenderlich.com/c/books/" />
    </PreferenceScreen>

  </PreferenceCategory>

</PreferenceScreen>