<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ This project and source code may use libraries or frameworks that are
  ~ released under various Open-Source licenses. Use of those libraries and
  ~ frameworks are governed by their own individual licenses.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<androidx.constraintlayout.motion.widget.MotionLayout android:id="@+id/discover_motion_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/discover_fragment_scene"
    tools:context=".discover.DiscoverFragment">

  <com.google.android.material.button.MaterialButton
      android:id="@+id/discover_button_discard"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/space_normal"
      android:background="?colorBackgroundFloating"
      android:text="@string/shared_discard"
      app:icon="@drawable/ic_baseline_thumb_down_24"
      app:iconPadding="@dimen/drawable_padding"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/discover_button_try"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/discover_button_try"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/space_normal"
      android:text="@string/shared_try_it"
      app:icon="@drawable/ic_baseline_thumb_up_24"
      app:iconPadding="@dimen/drawable_padding"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/discover_button_discard" />

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/discover_recipe_card_new"
      android:layout_width="270dp"
      android:layout_height="424dp"
      app:cardBackgroundColor="@color/colorAccent"
      app:cardCornerRadius="@dimen/card_radius"
      app:layout_constraintBottom_toTopOf="@id/discover_button_discard"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/discover_recipe_card"
      android:layout_width="270dp"
      android:layout_height="424dp"
      app:cardBackgroundColor="@color/colorAccent"
      app:cardCornerRadius="@dimen/card_radius"
      app:layout_constraintBottom_toTopOf="@id/discover_button_discard"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:id="@+id/discover_recipe_image"
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:layout_constraintDimensionRatio="2:1"
          android:contentDescription="@null"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:src="@drawable/taco_1" />

      <TextView
          android:id="@+id/discovery_card_recipe_description"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_margin="@dimen/space_normal"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="?colorOnPrimary"
          app:layout_constraintBottom_toTopOf="@id/discovery_card_detail_button"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/discover_recipe_image"
          tools:text="@tools:sample/lorem/random" />

      <View
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:background="@drawable/recipe_preview_gradient"
          app:layout_constraintBottom_toBottomOf="@id/discovery_card_recipe_description"
          app:layout_constraintEnd_toEndOf="@id/discovery_card_recipe_description"
          app:layout_constraintStart_toStartOf="@id/discovery_card_recipe_description"
          app:layout_constraintTop_toTopOf="@id/discovery_card_recipe_description" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/discovery_card_detail_button"
          style="@style/Widget.MaterialComponents.Button.TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:background="?selectableItemBackground"
          android:clickable="true"
          android:drawablePadding="@dimen/space_normal"
          android:focusable="true"
          android:gravity="center_horizontal"
          android:padding="@dimen/space_normal"
          android:text="@string/shared_details"
          android:textColor="?colorOnPrimary"
          app:icon="@drawable/ic_baseline_view_24"
          app:iconPadding="@dimen/drawable_padding"
          app:iconTint="?colorOnPrimary"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.motion.widget.MotionLayout>